--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "uvicorn",
+      "cwd": "${workspaceFolder}/VibeCycleBackend",
       "args": ["app.main:app", "--reload"],
       "jinja": true
     }
